--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,6 +1,56 @@
 - project :
     print : True # If 'False' is selected, it will not be displayed in 'home.html > aside > .proj-content'. 
-    modal : True # If 'True' is selected, modal can open in 'portfolio.html'. 
+    modal : False # If 'True' is selected, modal can open in 'portfolio.html'. 
+    url :  # Full URL
+    image : # path: assets/project/
+    date : 2022.01.01 - 2022.01.10
+    title : MSc Dissertation Project
+    summary : This
+    description : 
+    
+- project :
+    print : True # If 'False' is selected, it will not be displayed in 'home.html > aside > .proj-content'. 
+    modal : False # If 'True' is selected, modal can open in 'portfolio.html'. 
+    url :  # Full URL
+    image : # path: assets/project/
+    date : 2019.01.01 - 2019.01.01
+    title : Mobile Robot SLAM Demo
+    summary : This
+    description : Aria and SFML
+    
+- project :
+    print : True # If 'False' is selected, it will not be displayed in 'home.html > aside > .proj-content'. 
+    modal : False # If 'True' is selected, modal can open in 'portfolio.html'. 
+    url :  # Full URL
+    image : # path: assets/project/
+    date : 2019.01.01 - 2019.01.01
+    title : Goal Orientated Action Planning Demo
+    summary : This
+    description : 
+    
+- project :
+    print : True # If 'False' is selected, it will not be displayed in 'home.html > aside > .proj-content'. 
+    modal : False # If 'True' is selected, modal can open in 'portfolio.html'. 
+    url :  # Full URL
+    image : # path: assets/project/
+    date : 2019.01.01 - 2019.01.01
+    title : Steering Behaviours Demo
+    summary : This
+    description : Ogre 
+    
+- project :
+    print : True # If 'False' is selected, it will not be displayed in 'home.html > aside > .proj-content'. 
+    modal : False # If 'True' is selected, modal can open in 'portfolio.html'. 
+    url :  # Full URL
+    image : # path: assets/project/
+    date : 2019.01.01 - 2019.01.01
+    title : Steering Behaviours Demo
+    summary : This
+    description : Ogre 
+
+- project :
+    print : True # If 'False' is selected, it will not be displayed in 'home.html > aside > .proj-content'. 
+    modal : False # If 'True' is selected, modal can open in 'portfolio.html'. 
     url : https://github.com/naye0ng/Grape-Theme # Full URL
     image : "portfolio.png" # path: assets/project/
     date : 2019.06.09 - Developing
@@ -8,31 +58,21 @@
     summary : A awesome jekyll theme!
     description : This project is my first jekyll theme. and everyone can customize this easily.  
     contents :
-        - title : 1. 블로그 첫 화면 구성
+        - title : 1.
           image : home.png
           description : <li>Responsive Layout</li>
             <li>User Profile</li> 
             <li>Tags</li> 
             <li>Projects</li> 
             <li>Pagination</li>
-        - title : 2. 태그 페이지
+        - title : 2.
           image : tags.png
           description : <li>Responsive Layout</li> 
             <li>Tags</li> 
-        - title : 3. 남은 개발 과제
+        - title : 3.
           image :
-          description : <li>project 부분 디자인 변경</li>
-            <li>favicon.ico, search 기능</li>
-            <li>OG Tag 추가</li>
-            <li>profile 이미지 효과</li>
-            <li>gem 배포</li> 
-
-- project :
-    print : True # If 'False' is selected, it will not be displayed in 'home.html > aside > .proj-content'. 
-    modal : True # If 'True' is selected, modal can open in 'portfolio.html'. 
-    url :  # Full URL
-    image : # path: assets/project/
-    date : 2019.06.09 - Developing
-    title : Dummy project
-    summary : This is Dummy
-    description :  
+          description : <li>project</li>
+            <li>favicon.ico, search</li>
+            <li>OG Tag</li>
+            <li>profile</li>
+            <li>gem</li> 
