--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 markdown: kramdown
 
 # URL of the Site
-url: 'https://antarctica2015.github.io/'
+url: 'https://antarctica2015.github.io'
 # Base URL of the Site (i.e., Name of the Repository in which the Site is hosted)
 baseurl:
 
