--- a/_config.yml
+++ b/_config.yml
@@ -49,8 +49,7 @@ author-name: Brett Keir Jones
 author-image: /assets/images/Me.jpg
 
 # 60 Words About the Author
-#author-about: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget pharetra velit, dapibus bibendum ex. Maecenas vitae laoreet mauris, ac luctus metus. Aliquam luctus velit vel ipsum feugiat, vel venenatis mauris hendrerit. Sed at vulputate sapien, eget vehicula dolor. Aliquam volutpat pulvinar neque sit amet sodales.
-author-about: "Recently gained MSc Intelligent Systems & Robotics..."
+author-about: "Recent mature graduate with distinction in MSc Intelligent Systems & Robotics. My dissertation project focused on Multi-Agent Deep Reinforcement Learning (MADRL) and I would love to be able to put what I have learned so far into practice."
 
 # URL to the Author's Profile (i.e., Github, Twitter, Stackoverflow, etc)
 author-url: https://github.com/antarctica2015
