--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,8 @@
-#Dissertation Project - Playing American Football By Combining Reinforcement and Imitation Learning
+- name: Unreal Engine 5 WIP AI Demo
+  link: https://github.com/antarctica2015/
+  image: /assets/images/
+  description: UE 5, C++, Behaviour Trees
+  
 - name: MSc Intelligent Systems & Robotics Project
   link: https://github.com/antarctica2015/MSc-Dissertation
   image: /assets/images/SAFE2.png
