--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,4 @@
-- name: Unreal Engine 5 WIP AI Demo
+- name: Unreal Engine 5 WIP AI Project Demo
   link: https://github.com/antarctica2015/
   image: /assets/images/ue5.png
   description: UE 5, C++, Behaviour Trees
